--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="social-networks">
                                 <ul class="networks-list">
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#instagram"></use>
@@ -151,7 +151,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#twitter"></use>
@@ -160,7 +160,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#facebook"></use>
@@ -169,7 +169,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#linkedin"></use>
@@ -191,7 +191,7 @@
                             <div class="social-networks">
                                 <ul class="networks-list">
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#instagram"></use>
@@ -200,7 +200,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#twitter"></use>
@@ -209,7 +209,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#facebook"></use>
@@ -218,7 +218,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#linkedin"></use>
@@ -240,7 +240,7 @@
                             <div class="social-networks">
                                 <ul class="networks-list">
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#instagram"></use>
@@ -249,7 +249,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#twitter"></use>
@@ -258,7 +258,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#facebook"></use>
@@ -267,7 +267,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#linkedin"></use>
@@ -289,7 +289,7 @@
                             <div class="social-networks">
                                 <ul class="networks-list">
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#instagram"></use>
@@ -298,7 +298,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#twitter"></use>
@@ -307,7 +307,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#facebook"></use>
@@ -316,7 +316,7 @@
                                         </a>
                                     </li>
                                     <li class="item">
-                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
+                                        <a href="#" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#linkedin"></use>
@@ -398,28 +398,28 @@
             <div class="footer-media">
                 <h3 class="media-logo">Social media</h3>
                 <ul class="media-links">
-                    <li class="item"><a href="#" alt="Instagram" rel="noopener norefferer nofollow">
+                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
                                     <use href="./img/icons.svg#instagram"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" alt="Twitter" rel="noopener norefferer nofollow">
+                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
                                     <use href="./img/icons.svg#twitter"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" alt="Facebook" rel="noopener norefferer nofollow">
+                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
                                     <use href="./img/icons.svg#facebook"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" alt="LinkedIn" rel="noopener norefferer nofollow">
+                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
                                     <use href="./img/icons.svg#linkedin"></use>
                                 </svg></div>
