--- a/portfolio.html
+++ b/portfolio.html
@@ -159,28 +159,28 @@
             <div class="footer-media">
                 <h3 class="media-logo">Social media</h3>
                 <ul class="media-links">
-                    <li class="item"><a href="#" alt="Instagram" rel="noopener norefferer nofollow">
+                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
                                     <use href="./img/icons.svg#instagram"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" alt="Twitter" rel="noopener norefferer nofollow">
+                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
                                     <use href="./img/icons.svg#twitter"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" alt="Facebook" rel="noopener norefferer nofollow">
+                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
                                     <use href="./img/icons.svg#facebook"></use>
                                 </svg></div>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" alt="LinkedIn" rel="noopener norefferer nofollow">
+                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
                             <div class="icon-wrap"><svg class="network-item">
                                     <use href="./img/icons.svg#linkedin"></use>
                                 </svg></div>
