portfolio div wrap shadow added

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,83 +60,101 @@
                 <div class="list-wrap">
                     <ul class="listing-content">
                         <li class="item">
-                            <div class="card project">
-                                <img src="./img/banking-app.jpg" alt="Banking App" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                                    <p class="portfolio-text">App</p>
+                            <div class="wrap-shadow">
+                                <img class="card-image" src="./img/banking-app.jpg" alt="Banking App" width="360">
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                                        <p class="portfolio-text">App</p>
+                                    </div>
                                 </div>
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card project">
+                            <div class="wrap-shadow">
                                 <img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Cashless Payment</h2>
-                                    <p class="portfolio-text">Marketing</p>
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Cashless Payment</h2>
+                                        <p class="portfolio-text">Marketing</p>
+                                    </div>
                                 </div>
-                            </div>
+                                </di>
                         </li>
                         <li class="item">
-                            <div class="card project">
+                            <div class="wrap-shadow">
                                 <img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Meditaion App</h2>
-                                    <p class="portfolio-text">App</p>
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Meditaion App</h2>
+                                        <p class="portfolio-text">App</p>
+                                    </div>
                                 </div>
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card project">
+                            <div class="wrap-shadow">
                                 <img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Taxi Service</h2>
-                                    <p class="portfolio-text">Marketing</p>
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Taxi Service</h2>
+                                        <p class="portfolio-text">Marketing</p>
+                                    </div>
                                 </div>
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card project">
+                            <div class="wrap-shadow">
                                 <img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Screen Illustrations</h2>
-                                    <p class="portfolio-text">Design</p>
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Screen Illustrations</h2>
+                                        <p class="portfolio-text">Design</p>
+                                    </div>
                                 </div>
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card project">
+                            <div class="wrap-shadow">
                                 <img src="./img/online-cources.jpg" alt="Online Courses" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Online Courses</h2>
-                                    <p class="portfolio-text">Markrting</p>
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Online Courses</h2>
+                                        <p class="portfolio-text">Markrting</p>
+                                    </div>
                                 </div>
-                            </div>
+                                </di>
                         </li>
                         <li class="item">
-                            <div class="card project">
+                            <div class="wrap-shadow">
                                 <img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                                    <p class="portfolio-text">Design</p>
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                                        <p class="portfolio-text">Design</p>
+                                    </div>
                                 </div>
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card project">
+                            <div class="wrap-shadow">
                                 <img src="./img/organic-food.jpg" alt="Organic Food" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Organic Food</h2>
-                                    <p class="portfolio-text">Web Site</p>
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Organic Food</h2>
+                                        <p class="portfolio-text">Web Site</p>
+                                    </div>
                                 </div>
                             </div>
                         </li>
                         <li class="item">
-                            <div class="card project">
+                            <div class="wrap-shadow">
                                 <img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
-                                <div class="portfolio-descr">
-                                    <h2 class="portfolio-title">Fresh Coffee</h2>
-                                    <p class="portfolio-text">Web Site</p>
+                                <div class="card project">
+                                    <div class="portfolio-descr">
+                                        <h2 class="portfolio-title">Fresh Coffee</h2>
+                                        <p class="portfolio-text">Web Site</p>
+                                    </div>
                                 </div>
                             </div>
                         </li>
