--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -24,7 +24,7 @@
         <nav class="container main-nav">
             <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
             <ul class="site-nav">
-                <li class="item"><a href="./" class="nav-links">Studio</a></li>
+                <li class="item"><a href="./index.html" class="nav-links">Studio</a></li>
                 <li class="item"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
                 <li class="item"><a href="" class="nav-links">Contacts</a></li>
             </ul>
@@ -46,120 +46,120 @@
         <section class="portfolio-container">
             <div class="container">
                 <h1 class="visually-hidden">Work examples</h1>
-                <div class="portfolio">
-                    <ul class="portfolio filters">
-                        <li class="item"><button type="button" class="filter-button">All</button></li>
-                        <li class="item"><button type="button" class="filter-button">Web Site</button></li>
-                        <li class="item"><button type="button" class="filter-button">App</button></li>
-                        <li class="item"><button type="button" class="filter-button">Design</button></li>
-                        <li class="item"><button type="button" class="filter-button">Marketing</button></li>
-                    </ul>
-                </div>
+
+                <ul class="filters">
+                    <li class="item"><button type="button" class="filter-button">All</button></li>
+                    <li class="item"><button type="button" class="filter-button">Web Site</button></li>
+                    <li class="item"><button type="button" class="filter-button">App</button></li>
+                    <li class="item"><button type="button" class="filter-button">Design</button></li>
+                    <li class="item"><button type="button" class="filter-button">Marketing</button></li>
+                </ul>
 
 
-                <div class="list-wrap">
-                    <ul class="listing-content">
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img class="card-image" src="./img/banking-app.jpg" alt="Banking App" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                                        <p class="portfolio-text">App</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Cashless Payment</h2>
-                                        <p class="portfolio-text">Marketing</p>
-                                    </div>
-                                </div>
-                                </di>
-                        </li>
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Meditaion App</h2>
-                                        <p class="portfolio-text">App</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Taxi Service</h2>
-                                        <p class="portfolio-text">Marketing</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Screen Illustrations</h2>
-                                        <p class="portfolio-text">Design</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img src="./img/online-cources.jpg" alt="Online Courses" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Online Courses</h2>
-                                        <p class="portfolio-text">Markrting</p>
-                                    </div>
-                                </div>
-                                </di>
-                        </li>
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                                        <p class="portfolio-text">Design</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img src="./img/organic-food.jpg" alt="Organic Food" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Organic Food</h2>
-                                        <p class="portfolio-text">Web Site</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="wrap-shadow">
-                                <img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
-                                <div class="card project">
-                                    <div class="portfolio-descr">
-                                        <h2 class="portfolio-title">Fresh Coffee</h2>
-                                        <p class="portfolio-text">Web Site</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+
+
+                <ul class="listing-content">
+                    <li class="item">
+
+                        <img class="card-image" src="./img/banking-app.jpg" alt="Banking App" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                            <p>App</p>
+
+                        </div>
+
+                    </li>
+                    <li class="item">
+
+                        <img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Cashless Payment</h2>
+                            <p>Marketing</p>
+
+                        </div>
+
+                    </li>
+                    <li class="item">
+
+                        <img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Meditaion App</h2>
+                            <p>App</p>
+
+                        </div>
+
+                    </li>
+                    <li class="item">
+
+                        <img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Taxi Service</h2>
+                            <p>Marketing</p>
+
+                        </div>
+
+                    </li>
+                    <li class="item">
+
+                        <img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Screen Illustrations</h2>
+                            <p>Design</p>
+
+                        </div>
+
+                    </li>
+                    <li class="item">
+
+                        <img src="./img/online-cources.jpg" alt="Online Courses" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Online Courses</h2>
+                            <p>Markrting</p>
+
+                        </div>
+
+                    </li>
+                    <li class="item">
+
+                        <img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                            <p>Design</p>
+
+                        </div>
+
+                    </li>
+                    <li class="item">
+
+                        <img src="./img/organic-food.jpg" alt="Organic Food" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Organic Food</h2>
+                            <p>Web Site</p>
+
+                        </div>
+
+                    </li>
+                    <li class="item">
+
+                        <img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                        <div class="card-project">
+
+                            <h2 class="portfolio-title">Fresh Coffee</h2>
+                            <p>Web Site</p>
+
+                        </div>
+
+                    </li>
+                </ul>
+
             </div>
         </section>
 
@@ -167,41 +167,41 @@
 
     <footer>
         <div class="footer container">
-            <div class="footer">
-                <a href="./" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
+            <div class="footer-box">
+                <a href="./index.html" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
                 <p class="footer">Increase the flow of customers and sales for your business with digital marketing &
                     growth
                     solutions.</p>
             </div>
 
             <div class="footer-media">
-                <h3 class="media-logo">Social media</h3>
+                <p class="media-logo">Social media</p>
                 <ul class="media-links">
-                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
-                            <div class="icon-wrap"><svg class="network-item">
-                                    <use href="./img/icons.svg#instagram"></use>
-                                </svg></div>
+                    <li class="item"><a href="#" class="icon-wrap">
+                            <svg class="network-footer">
+                                <use href="./img/icons.svg#instagram"></use>
+                            </svg>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
-                            <div class="icon-wrap"><svg class="network-item">
-                                    <use href="./img/icons.svg#twitter"></use>
-                                </svg></div>
+                    <li class="item"><a href="#" class="icon-wrap">
+                            <svg class="network-footer">
+                                <use href="./img/icons.svg#twitter"></use>
+                            </svg>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
-                            <div class="icon-wrap"><svg class="network-item">
-                                    <use href="./img/icons.svg#facebook"></use>
-                                </svg></div>
+                    <li class="item"><a href="#" class="icon-wrap">
+                            <svg class="network-footer">
+                                <use href="./img/icons.svg#facebook"></use>
+                            </svg>
                         </a>
 
                     </li>
-                    <li class="item"><a href="#" rel="noopener norefferer nofollow">
-                            <div class="icon-wrap"><svg class="network-item">
-                                    <use href="./img/icons.svg#linkedin"></use>
-                                </svg></div>
+                    <li class="item"><a href="#" class="icon-wrap">
+                            <svg class="network-footer">
+                                <use href="./img/icons.svg#linkedin"></use>
+                            </svg>
                         </a>
 
                     </li>
