--- a/portfolio.html
+++ b/portfolio.html
@@ -168,7 +168,7 @@
     <footer>
         <div class="footer container">
             <div class="footer-box">
-                <a href="./index.html" class="logo margin">WEB<span class="logo-footer">STUDIO</span></a>
+                <a href="./index.html" class="footer-logo">WEB<span class="logo-footer">STUDIO</span></a>
                 <p class="footer">Increase the flow of customers and sales for your business with digital marketing &
                     growth
                     solutions.</p>
