portfolio cards overlay animation

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,13 @@
                 <ul class="listing-content">
                     <li class="item">
 
-                        <img class="card-image" src="./img/banking-app.jpg" alt="Banking App" width="360">
+                        <div class="wrap-card-overlay">
+                            <img class="card-image" src="./img/banking-app.jpg" alt="Banking App" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Banking App Interface Concept</h2>
@@ -72,7 +78,13 @@
                     </li>
                     <li class="item">
 
-                        <img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                        <div class="wrap-card-overlay">
+                            <img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Cashless Payment</h2>
@@ -83,7 +95,13 @@
                     </li>
                     <li class="item">
 
-                        <img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
+                        <div class="wrap-card-overlay">
+                            <img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Meditaion App</h2>
@@ -94,7 +112,13 @@
                     </li>
                     <li class="item">
 
-                        <img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
+                        <div class="wrap-card-overlay">
+                            <img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Taxi Service</h2>
@@ -105,7 +129,13 @@
                     </li>
                     <li class="item">
 
-                        <img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
+                        <div class="wrap-card-overlay">
+                            <img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Screen Illustrations</h2>
@@ -116,7 +146,13 @@
                     </li>
                     <li class="item">
 
-                        <img src="./img/online-cources.jpg" alt="Online Courses" width="360">
+                        <div class="wrap-card-overlay">
+                            <img src="./img/online-cources.jpg" alt="Online Courses" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Online Courses</h2>
@@ -127,7 +163,13 @@
                     </li>
                     <li class="item">
 
-                        <img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
+                        <div class="wrap-card-overlay">
+                            <img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Instagram Stories Concept</h2>
@@ -138,7 +180,13 @@
                     </li>
                     <li class="item">
 
-                        <img src="./img/organic-food.jpg" alt="Organic Food" width="360">
+                        <div class="wrap-card-overlay">
+                            <img src="./img/organic-food.jpg" alt="Organic Food" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Organic Food</h2>
@@ -149,7 +197,13 @@
                     </li>
                     <li class="item">
 
-                        <img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                        <div class="wrap-card-overlay">
+                            <img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                            <p class="card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-project">
 
                             <h2 class="portfolio-title">Fresh Coffee</h2>
