header menu underline :after added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="container main-nav">
             <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
             <ul class="site-nav">
-                <li class="item"><a href="./index.html" class="nav-links">Studio</a></li>
+                <li class="item active"><a href="./index.html" class="nav-links">Studio</a></li>
                 <li class="item"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
                 <li class="item"><a href="" class="nav-links">Contacts</a></li>
             </ul>
