--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
             <ul class="site-nav">
                 <li class="item"><a href="./index.html" class="nav-links">Studio</a></li>
-                <li class="item"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
+                <li class="item active"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
                 <li class="item"><a href="" class="nav-links">Contacts</a></li>
             </ul>
             <address class="address-ul">
