--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                <button type="button" class="hero-button">Order Service</button>
+                <button type="button" class="hero-button" data-modal-open>Order Service</button>
             </div>
         </section>
 
@@ -405,7 +405,17 @@
             </div>
         </div>
     </footer>
-
+    <!-- Modal  -->
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="data-modal-close" data-modal-close>
+                <svg>
+                    <use href="./img/icons.svg#close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
