--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="data-modal-close" data-modal-close>
-                <svg>
+                <svg class="modal-close-icon" width="24" height="24">
                     <use href="./img/icons.svg#close"></use>
                 </svg>
             </button>
