header fixed: address replaced from nav

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,27 +20,30 @@
 
     <header>
 
+        <div class="container">
 
-        <nav class="container main-nav">
-            <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
-            <ul class="site-nav">
-                <li class="item"><a href="./index.html" class="nav-links">Studio</a></li>
-                <li class="item active"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
-                <li class="item"><a href="" class="nav-links">Contacts</a></li>
-            </ul>
-            <address class="address-ul">
-                <ul class="address">
-                    <li class="item"><a href="mailto:info@devstudio.com" class="nav-address">info@devstudio.com</a></li>
+            <nav class=" main-nav">
+                <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
+                <ul class="site-nav">
+                    <li class="item active"><a href="./index.html" class="nav-links">Studio</a></li>
+                    <li class="item"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
+                    <li class="item"><a href="" class="nav-links">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="address">
+
+                <ul class="address-ul">
+                    <li class="item"><a href="mailto:info@devstudio.com" class="nav-address">info@devstudio.com</a>
+                    </li>
                     <li class="item"><a href="tel:+110001111111" class="nav-address">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
-        </nav>
 
+        </div>
 
 
 
     </header>
-
     <main>
 
         <section class="portfolio-container">
