--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
             <nav class=" main-nav">
                 <a href="./" class="logo">WEB<span class="logo-gray">STUDIO</span></a>
                 <ul class="site-nav">
-                    <li class="item active"><a href="./index.html" class="nav-links">Studio</a></li>
-                    <li class="item"><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
+                    <li class="item "><a href="./index.html" class="nav-links">Studio</a></li>
+                    <li class="item"><a href="./portfolio.html" class="nav-links active">Portfolio</a></li>
                     <li class="item"><a href="" class="nav-links">Contacts</a></li>
                 </ul>
             </nav>
