--- a/index.html
+++ b/index.html
@@ -430,15 +430,68 @@
         </div>
     </footer>
     <!-- Modal  -->
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop " data-modal>
         <div class="modal">
             <button class="data-modal-close" data-modal-close>
                 <svg class="modal-close-icon" width="8" height="8">
                     <use href="./img/icons.svg#close"></use>
                 </svg>
             </button>
+
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+
+            <form action="">
+
+
+                <label for="input-name" class="form-label">Name</label>
+                <div class="input-wrap">
+                    <input type="name" name="name" class="modal-input" autofocus required id="input-name">
+                    <svg class="modal-icon" width="24" height="24">
+                        <use href="./img/icons.svg#avatar"></use>
+                    </svg>
+                </div>
+
+                <label for="input-tel" class="form-label">Phone</label>
+                <div class="input-wrap">
+                    <input type="tel" name="phone" class="modal-input" required id="input-tel">
+                    <svg class="modal-icon" width="24" height="24">
+                        <use href="./img/icons.svg#phone"></use>
+                    </svg>
+                </div>
+
+                <label for="input-email" class="form-label">Email</label>
+                <div class="input-wrap">
+                    <input type="email" name="email" class="modal-input" required id="input-email">
+                    <svg class="modal-icon" width="24" height="24">
+                        <use href="./img/icons.svg#email"></use>
+                    </svg>
+                </div>
+
+                <label for="textarea" class="form-label">Comment</label>
+                <textarea name="message" id="textarea" class="modal-textarea" placeholder="Text input"></textarea>
+                <div class="comment-wrap">
+                    <input type="checkbox" name="terms" value="true" required id="terms"
+                        class="terms-check visually-hidden">
+                    <label for="terms" class="check-label">
+
+                        <svg class="check-icon" width="8" height="8">
+                            <use href="./img/icons.svg#check"></use>
+                        </svg>
+                        I accept the terms and conditions of
+                        the <a href="#">Privacy
+                            Policy</a>
+
+                    </label>
+
+                </div>
+
+                <button type="submit" class="submit-button">Send</button>
+
+            </form>
         </div>
     </div>
+
+
     <script src="./js/modal.js"></script>
 </body>
 
