--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         </div>
     </footer>
     <!-- Modal  -->
-    <div class="backdrop " data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="data-modal-close" data-modal-close>
                 <svg class="modal-close-icon" width="8" height="8">
