--- a/index.html
+++ b/index.html
@@ -409,20 +409,19 @@
             </div>
 
             <div class="footer-subscribe">
-                <form name="subscription-form">
-                    <label for="user-email"></label>
-                    <p class="media-logo">Subscribe</p>
+                <p class="media-logo">Subscribe</p>
+                <form class="subscription-wrap">
 
-                    <div class="subscription-wrap">
-                        <input type="email" placeholder="E-mail" class="subscribe-input" name="email" required
-                            id="user-email">
-                        <button type="submit" class="subscribe-button">
-                            Subscribe
-                            <svg class="subscribe-icon" width="24" height="24">
-                                <use href="./img/icons.svg#plane"></use>
-                            </svg>
-                        </button>
-                    </div>
+
+                    <input type="email" placeholder="E-mail" class="subscribe-input" name="email" required
+                        id="user-email">
+                    <button type="submit" class="subscribe-button">
+                        Subscribe
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./img/icons.svg#plane"></use>
+                        </svg>
+                    </button>
+
 
 
                 </form>
@@ -440,13 +439,13 @@
 
             <p class="modal-title">Leave your contacts and we will call you back</p>
 
-            <form action="">
+            <form>
 
 
                 <label for="input-name" class="form-label">Name</label>
                 <div class="input-wrap">
-                    <input type="name" name="name" class="modal-input" autofocus required id="input-name">
-                    <svg class="modal-icon" width="24" height="24">
+                    <input type="text" name="name" class="modal-input" autofocus required id="input-name">
+                    <svg class="modal-icon" width="18" height="18">
                         <use href="./img/icons.svg#avatar"></use>
                     </svg>
                 </div>
@@ -454,7 +453,7 @@
                 <label for="input-tel" class="form-label">Phone</label>
                 <div class="input-wrap">
                     <input type="tel" name="phone" class="modal-input" required id="input-tel">
-                    <svg class="modal-icon" width="24" height="24">
+                    <svg class="modal-icon" width="18" height="24">
                         <use href="./img/icons.svg#phone"></use>
                     </svg>
                 </div>
@@ -462,7 +461,7 @@
                 <label for="input-email" class="form-label">Email</label>
                 <div class="input-wrap">
                     <input type="email" name="email" class="modal-input" required id="input-email">
-                    <svg class="modal-icon" width="24" height="24">
+                    <svg class="modal-icon" width="18" height="24">
                         <use href="./img/icons.svg#email"></use>
                     </svg>
                 </div>
@@ -470,16 +469,20 @@
                 <label for="textarea" class="form-label">Comment</label>
                 <textarea name="message" id="textarea" class="modal-textarea" placeholder="Text input"></textarea>
                 <div class="comment-wrap">
-                    <input type="checkbox" name="terms" value="true" required id="terms"
-                        class="terms-check visually-hidden">
-                    <label for="terms" class="check-label">
+                    <div class="terms-wrap"><input type="checkbox" name="terms" value="true" required id="terms"
+                            class="terms-check visually-hidden">
 
-                        <svg class="check-icon" width="8" height="8">
-                            <use href="./img/icons.svg#check"></use>
-                        </svg>
-                        I accept the terms and conditions of
-                        the <a href="#">Privacy
-                            Policy</a>
+                        <label for="terms" class="check-label">
+
+                            <span class="check-wrap">
+                                <svg class="check-icon" width="8" height="10">
+                                    <use href="./img/icons.svg#check"></use>
+                                </svg>
+                            </span>
+                            I accept the terms and conditions of
+                            the <a href="#">Privacy
+                                Policy</a>
+                    </div>
 
                     </label>
 
