--- a/portfolio.html
+++ b/portfolio.html
@@ -266,20 +266,19 @@
             </div>
 
             <div class="footer-subscribe">
-                <form name="subscription-form">
-                    <label for="user-email"></label>
-                    <p class="media-logo">Subscribe</p>
+                <p class="media-logo">Subscribe</p>
+                <form class="subscription-wrap">
 
-                    <div class="subscription-wrap">
-                        <input type="email" placeholder="E-mail" class="subscribe-input" name="email" required
-                            id="user-email">
-                        <button type="submit" class="subscribe-button">
-                            Subscribe
-                            <svg class="subscribe-icon" width="24" height="24">
-                                <use href="./img/icons.svg#plane"></use>
-                            </svg>
-                        </button>
-                    </div>
+
+                    <input type="email" placeholder="E-mail" class="subscribe-input" name="email" required
+                        id="user-email">
+                    <button type="submit" class="subscribe-button">
+                        Subscribe
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./img/icons.svg#plane"></use>
+                        </svg>
+                    </button>
+
 
 
                 </form>
