--- a/index.html
+++ b/index.html
@@ -479,9 +479,9 @@
                                     <use href="./img/icons.svg#check"></use>
                                 </svg>
                             </span>
-                            I accept the terms and conditions of
-                            the <a href="#">Privacy
-                                Policy</a>
+                            <span class="check-text">I accept the terms and conditions of
+                                the <a href="#" class="terms-link">Privacy
+                                    Policy</a></span>
 
 
                         </label>
